# tunix-agents

./: .gitignore  Makefile  README.md  docstrings_to_expand.json  mkdocs.yml  pyproject.toml  report_audit.md
.agents/plugins/: marketplace.json
.github/workflows/: docs.yml  mvp-python-matrix.yml  quality.yml
compatibility/: training-stack.yaml  tunix.yaml
configs/: README.md  index.yaml
configs/benchmarks/: caged_craftext_full.yaml  craftext_full.yaml  craftext_tiny.yaml
configs/generation/: qwen_vllm_async.yaml  qwen_vllm_sync.yaml
configs/grpo/: qwen_agentic_local.yaml
configs/manual/: caged_wood_achievements_energy.yaml
configs/models/: gemma3_270m_instruction.yaml  qwen25_05b_instruction.yaml
configs/mvp/: qwen_craftext.yaml  tiny_craftext.yaml
configs/topology/: qwen_agentic_grpo_local.yaml  qwen_four_device_colocated.yaml  qwen_local_smoke.yaml
docs/: architecture.md  checkpoints.md  cli.md  code-quality.md  code-reference.md  configuration.md  delivery.md  development.md  examples.md  experiments.md  index.md  inference.md  interop.md  observability.md  plan.md  profiling.md  project_status.json  prompts.md  quality.md  report_audit.md  training-stack-audit.md  tunix.md  unit-test-audit.md  vendor-patches.md
docs/adr/: 0001-system-boundaries.md  0002-first-tunix-model.md  0003-extension-and-observability-contracts.md  0004-tunix-cluster-topology.md  0005-sync-first-training-stack.md  0006-rollout-generation-boundary.md
docs/javascripts/: mermaid.js  task-graph.js
docs/stylesheets/: kanban.css
examples/: README.md
examples/.ipynb_checkpoints/: README-checkpoint.md
examples/notebooks/: 01_rollout_contract.ipynb  02_craftext_adapter.ipynb  03_model_interop_lora.ipynb  04_megaprompts_environment_to_prompt.ipynb  05_caged_random_policy_trajectory.ipynb  06_qwen_craftext_manual_episode.ipynb  07_qwen_craftext_full_trajectory.ipynb  08_parallel_craftext_pipeline.ipynb  09_batched_qwen_craftext_rollout.ipynb  10_replay_to_token_ppo.ipynb  11_end_to_end_batched_qwen_ppo.ipynb  12_full_cycle_craftext_training.ipynb  13_replay_visualization.ipynb  14_generation_benchmark.ipynb  15_agentic_grpo_full_trainer.ipynb  16_server_grpo_object_training.ipynb  17_sync_vllm_craftext_rollout.ipynb  18_async_vllm_craftext_rollout.ipynb  19_host_prompt_threading_profile.ipynb  20_env_device_policy_benchmark.ipynb  21_sync_vllm_grpo_learning.ipynb  22_external_vllm_sync_grpo_rollout.ipynb
scripts/: benchmark_environments.py  benchmark_text_pipeline.py  check_server_readiness.py  estimate_vllm_memory.py  export_provenance.py  export_trajectory_gif.py  generate_dashboard.py  inspect_accelerator_stack.py  inspect_vllm_tunix_compat.py  manual_craftext_agent.py  run_agentic_grpo.py  run_text_episode.py  visualize_trajectory.py
sphinx/: api.rst  conf.py  index.rst
src/tunix_craftext/: __init__.py  agentic_craftext.py  agentic_grpo_smoke.py  agentic_ppo.py  algorithm_registry.py  algorithms.py  batched_rollout.py  checkpoints.py  config.py  (+30 more)
(+171 files in other folders)
