[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunix-craftext"
version = "0.0.1"
description = "JAX-native training stack for CrafText and CagedCrafText."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
  "jax>=0.4.30",
  "jaxtyping>=0.3.11",
  "flax>=0.8.5",
  "optax>=0.2.3",
  "orbax-checkpoint>=0.6.4",
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
tunix = ["google-tunix"]
replay = ["flashbax==0.1.3"]
lora = ["qwix==0.1.7"]
loop = ["clu==0.0.12"]
envs = ["craftext", "caged-craftext", "craftax>=1.4.3", "gymnasium>=0.29.1"]
interop = ["safetensors>=0.4.5"]
examples = ["jupyterlab>=4.0", "matplotlib>=3.8"]
prompts = ["megaprompt"]
dev = ["pytest>=8.3", "pytest-benchmark>=5.1", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6.0", "flashbax==0.1.3"]
docs = ["mkdocs-material>=9.5", "sphinx>=7.3", "sphinx-autodoc-typehints>=2.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/tunix_craftext"]

[tool.uv.sources]
megaprompt = { path = "vendor/megaprompts", editable = true }
craftext = { path = "vendor/craftext", editable = true }
caged-craftext = { path = "vendor/caged-craftext", editable = true }
google-tunix = { git = "https://github.com/google/tunix.git", rev = "608733cc9d3cd0cb06ea79bfd32d8a18c27ba0dc" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "integration: requires real CrafText/CagedCrafText dependencies",
  "performance: benchmark; excluded from the default test suite",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/tunix_craftext/tensor_types.py" = ["F722", "F821"]
